Grid Particles Crash #40052

Closed
opened 2014-05-06 20:32:35 +02:00 by Chris Monson · 8 comments

System Information
Windows 8.1
dual GT 750m

Blender Version
Broken: 2.70a f93bc76

Description
Blender crashes if you put it in a situation where it is trying to build a grid particle system with an empty mesh.

Exact steps for others to reproduce the error
GridParticleCrash.blend
Open blend file.
Enter edit mode on the provided cube.
Delete all the vertices.
Exit edit mode

At this point I either get an error dialog followed by exiting blender, or blender just exits with no warning given.

**System Information** Windows 8.1 dual GT 750m **Blender Version** Broken: 2.70a f93bc76 **Description** Blender crashes if you put it in a situation where it is trying to build a grid particle system with an empty mesh. **Exact steps for others to reproduce the error** [GridParticleCrash.blend](https://archive.blender.org/developer/F87313/GridParticleCrash.blend) Open blend file. Enter edit mode on the provided cube. Delete all the vertices. Exit edit mode At this point I either get an error dialog followed by exiting blender, or blender just exits with no warning given.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @cmonson

Added subscriber: @cmonson

Added subscriber: @particleemitter

Added subscriber: @particleemitter

I can replicate this issue

When hiding the particle system in the modifier stack before leaving edit mode, blender doesn't crash.
however as soon as I re-enable the particle system there it's crashing again

I'm using blender build 19e627c and I'm also on win8.1

I can replicate this issue When hiding the particle system in the modifier stack before leaving edit mode, blender doesn't crash. however as soon as I re-enable the particle system there it's crashing again I'm using blender build 19e627c and I'm also on win8.1
Lukas Tönne self-assigned this 2014-05-07 07:54:48 +02:00

This issue was referenced by blender/blender-addons-contrib@77d11a52b3

This issue was referenced by blender/blender-addons-contrib@77d11a52b30f9eecbf2080e353ce59fa4db7e0e7

This issue was referenced by 77d11a52b3

This issue was referenced by 77d11a52b30f9eecbf2080e353ce59fa4db7e0e7
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 77d11a52b3.

Closed by commit 77d11a52b3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40052
No description provided.