Fix T40052, Grid Particles Crash due to invalid empty mesh verts access for bbox calculation.